@@ -25,6 +25,7 @@ SubVersion: $Id$
 	- [roms]  $2604: optimized some refreshing parts of debugging windows; added refresh of heap window
 	- [roms]  $2611: optimized displaying of code window by refreshing ROM calls just once
 	- [kevin] $2620: made zlib non-optional now that libtifiles2 requires it anyway
+	- [roms]  $2624: allow double-clicking of a ROM instead of selecting + pressing OK button
 
 - 16/03/2007, version 3.00
 	- [kevin] $2389: don't use \n in the breakpoint window status bar
